--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -89,18 +89,18 @@ input[type=text], input[type=password] {
 
 /* Set a style for all buttons */
 button {
-  background-color: #b91dac;
+  background-color: #918c8c;
   color: white;
   padding: 5px 10px;
   margin: 4px 0;
   border: none;
   cursor: pointer;
   width: 70px;
-  border-radius: 40px
+  border-radius: 40px;
 }
 
 .button {
-  background-color: #b91dac;
+  background-color: #fc6625;
   color: white;
   padding: 5px 10px;
   margin: 4px 0;
@@ -295,7 +295,7 @@ img{
 
 
 footer{
-  margin-top:180px;
+  margin-top:100px;
   width:100%;
   height:40;
 
@@ -305,7 +305,7 @@ footer{
 }
 
 .logo{
-  width: 50px;margin: 1px auto;border: 1px ;border-radius:1px
+  width: 40px;margin: 1px auto;border: 1px ;border-radius:1px
 }
 
  /* user */
@@ -343,4 +343,32 @@ footer{
   border: 1px solid rgba(255, 255, 255, 0.7);
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
+}
+
+.formulario {
+  margin: 100px;
+  padding: 5px;
+
+}
+
+.portfolio-item:hover {
+  transition: all 0.5s;
+  opacity: 0.85;
+
+}
+
+.obligatorio{
+  color:red
+}
+
+h1 {
+  margin-bottom: 10px;
+}
+
+a{
+  color: #0680F9;
+}
+
+h3{
+  color: #EEEDEF;
 }
